change: the database.sql and database.properties must now be added to the working directory after deployment